<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AllScoreActivity" >

    <FrameLayout style="@style/TitleStyle" >

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="70dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickButton"
            android:text="@string/btn_cancel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_code"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/btnComplete"
            android:layout_width="70dp"
            android:layout_height="32dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickButton"
            android:text="@string/btn_complete"
            android:textColor="@color/white" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txtMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textIsSelectable="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <cy.lib.edittext.CyEditText
                    android:id="@+id/edtCode"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_code"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/btnReGet"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/btn_disable"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClickButton"
                    android:text="90秒后重新获取"
                    android:textColor="@color/white" />
            </LinearLayout>

            <cy.lib.edittext.CyEditText
                android:id="@+id/edtRealName"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_realname"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:maxLength="200"
                android:singleLine="true"
                android:textColor="@color/black" />
             <TextView
        android:id="@+id/txtWarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="*为了能正常提现，请确保您已通过支付宝实名认证!"
        android:textColor="@color/red"
        android:textSize="11dp" />

            <cy.lib.edittext.CyEditText
                android:id="@+id/edtAccount"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_payaccount"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btnCommit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_enable"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClickButton"
                android:padding="10dp"
                android:text="提交"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>