<cy.com.morefan.view.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layAll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:onClick="onClickButton"
    android:orientation="vertical"
    tools:context=".AllScoreActivity" >

    <FrameLayout style="@style/TitleStyle" >

        <cy.com.morefan.view.CyButton
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:background="@drawable/title_left_menu"
            android:onClick="onClickTitleButton" />


        <!--<TextView-->
                  <!--android:id="@+id/txtMall"-->
                  <!--android:layout_width="wrap_content"-->
                  <!--android:layout_height="match_parent"-->
                  <!--android:layout_weight="1"-->
                  <!--android:clickable="true"-->
                  <!--android:gravity="center"-->
                  <!--android:onClick="onClick"-->
                  <!--android:text="返利"-->
                  <!--android:textColor="@color/white" />-->


        <LinearLayout
            android:id="@+id/layMiddle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickTitleButton"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title_name"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/imgTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/title_middle_arrows" />
        </LinearLayout>

        <cy.com.morefan.view.CyButton
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:background="@drawable/title_right_refresh"
            android:clickable="true"
            android:onClick="onClickTitleButton" />

        <TextView
            android:id="@+id/txtPrenticeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:background="@drawable/count_bg"
            android:gravity="center"
            android:text="99"
            android:textColor="@color/white"
            android:textSize="9dp" />

        <!--<TextView-->
            <!--android:id="@+id/txtTask"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="推广↓"-->
            <!--android:textColor="@color/theme_blue"-->
            <!--android:layout_gravity="center" />-->
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_bg"
        android:visibility="gone" >

        <Button
            android:id="@+id/btnTask"
            style="@style/BottomTabStyle"
            android:background="@drawable/tab_btn_sel"
            android:text="@string/tab_task" />

        <Button
            android:id="@+id/btnGoods"
            style="@style/BottomTabStyle"
            android:text="@string/tab_goods"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnMy"
            style="@style/BottomTabStyle"
            android:background="@drawable/tab_btn_sel"
            android:text="@string/tab_my" />

        <Button
            android:id="@+id/btnMore"
            style="@style/BottomTabStyle"
            android:background="@drawable/tab_btn_sel"
            android:text="@string/tab_more" />
    </LinearLayout>

</cy.com.morefan.view.MyLinearLayout>